# GUI_setup_test

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml  ubuntu.yml
gui/: CMakeLists.txt  main.cpp
gui/common_assets/hexFiles/: test01.hex
gui/src/: L2DFileDialog.h
m6800/: CMakeLists.txt  main.cpp
m6800/include/: mem.h  mpu.h
m6800/src/: mem.cpp  mpu.cpp
unitTests/: CMakeLists.txt
unitTests/src/: testAccumulators.cpp
utilities/: CMakeLists.txt
utilities/include/: utilities.h
utilities/src/: utilieties.cpp
